--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="navbar-content">
                 <div class="logo">
                     <i class="fas fa-sitemap"></i>
-                    <span>OrgChart Pro</span>
+                    <span>Savic Lab Organizational Chart | Data Management and Analysis</span>
                 </div>
                 <div class="nav-actions">
                     <button class="btn-icon" id="refreshData" title="Refresh Data">
