--- a/index.html
+++ b/index.html
@@ -380,11 +380,7 @@
     </div>
 
     <!-- External Scripts -->
-    <script>
-    var script = document.createElement('script');
-    script.src = 'app.js?t=' + new Date().getTime();
-    document.head.appendChild(script);
-    </script>
+    <script src="app.js?v=1.0.5"></script>
     
     <!-- Admin Mode Toggle Script -->
     <script>
